--- a/package.json
+++ b/package.json
@@ -1,20 +1,34 @@
 {
-  "name": "coinbase",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "13.0.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "devDependencies": {
-    "eslint": "8.26.0",
-    "eslint-config-next": "13.0.2"
-  }
+    "name": "coinbase",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "ethe": "node ethereum/compile.js && node ethereum/deploy.js"
+    },
+    "dependencies": {
+        "@emotion/react": "^11.10.5",
+        "@emotion/server": "^11.10.0",
+        "@emotion/styled": "^11.10.5",
+        "@mui/icons-material": "^5.10.9",
+        "@mui/lab": "^5.0.0-alpha.106",
+        "@mui/material": "^5.10.12",
+        "@truffle/hdwallet-provider": "^2.1.1",
+        "fs-extra": "^10.1.0",
+        "ganache": "^7.5.0",
+        "jquery": "^3.6.1",
+        "mocha": "^10.1.0",
+        "next": "12.3.0",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "solc": "^0.8.17",
+        "web3": "^1.8.0"
+    },
+    "devDependencies": {
+        "eslint": "8.26.0",
+        "eslint-config-next": "13.0.2"
+    }
 }
